# gliner2-onnx

./: .gitignore  ARCHITECTURE.md  Makefile  README.md  pyproject.toml
.github/workflows/: publish.yml
gliner2_onnx/: __init__.py  constants.py  exceptions.py  runtime.py  types.py
tests/: README.md  __init__.py  generate_fixtures.py  gliner1.fixtures.json  gliner2.fixtures.json  test_onnx_vs_pytorch.py
tools/: __init__.py  export_count_embed.py  export_model.py
